# app-kiebids

./: .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yaml  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  run_flow.sh
.github/workflows/: main.yml  ruff.yml  tests.yml
configs/: default_config.yml  dev_ocr_config.yaml  dev_workflow_config.yaml  docker_config.yml  docker_ocr_config.yaml  docker_workflow_config.yaml  ocr_config.yaml  ocr_prd_config.yaml  workflow_config.yaml  workflow_prd_config.yaml
data/page_xml/: 0004__MB_1976_9_13_label_00001.xml
docker/: Dockerfile  docker-compose.yml  docker_requirements.txt
kiebids/: __init__.py  evaluation.py  evaluation_writer.py  logger.py  ocr_config.yaml  ocr_flow.py  parser.py  utils.py
kiebids/modules/: entity_linking.py  evaluation.py  evaluation_writer.py  layout_analysis.py  page_xml.py  parser.py  preprocessing.py  semantic_labeling.py  semantic_tagging.py  text_recognition.py
notebooks/: evaluation.ipynb  hymdata_transcribus_explore.ipynb  morph_experiments.ipynb  text_recognition.ipynb
tests/: test_entity_linking.py  test_pipeline.py  test_semantic_tagging.py
