[tool.poetry]
name = "kiebids"
version = "0.0.1"
description = ""
authors = ["Birds on Mars <info@birdsonmars.com>"]
readme = "README.md"
packages = [
  {include = "kiebids"}
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.8.0"
ipykernel = "^6.25.1"
nbstripout = "^0.6.1"
black = {extras = ["jupyter"], version = "*"}
ruff = "*"
langfuse = "^2.44.0"


[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
preview = true

[tool.ruff]
exclude = ["*.ipynb"]
target-version = "py310"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Use specific rule codes when ignoring type issues
    "PGH003",
    # shadowing a python builtin
    "A003",
    # Do not perform function calls in argument defaults (used by FastAPI)
    "B008",
    # Avoid specifying long messages outside the exception class
    "TRY003"
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

